biocomplexity/templates/xwiki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki-deployment
  namespace: biocomplexity
  labels:
    app: xwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      volumes:
      - name: xwiki-nfs-volume
        persistentVolumeClaim:
          claimName: xwiki-nfs-pvc # name of pvc
      containers:
      - name: xwiki-container
        image: xwiki:lts-postgres-tomcat
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: xwiki-nfs-volume
          mountPath: /usr/local/xwiki # mount inside of container
        resources:
          requests:
            memory: "2024Mi"
            cpu: "50m"
          limits:
            memory: "3024Mi"
            cpu: "100m"
