biocomplexity/templates/xwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki-service
  namespace: biocomplexity
spec:
  selector:
    app: xwiki
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
